<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">
     <item
                android:id="@+id/nav_dashboard"
                android:icon="@drawable/ic_home"
                android:title="@string/dashboard"/>
        <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_gallery"
                android:title="@string/gallery"/>
        <item
                android:id="@+id/nav_education"
                android:icon="@drawable/ic_education"
                android:title="@string/education"/>
        <item
                android:id="@+id/nav_rewards"
                android:icon="@drawable/ic_rewards"
                android:title="@string/rewards"/>
        
        <item
                android:id="@+id/nav_search"
                android:icon="@drawable/ic_search"
                android:title="@string/search"/>
    
        <item
                android:id="@+id/nav_career"
                android:icon="@drawable/ic_career"
                android:title="@string/career_assistance"/>
    
        <item
                android:id="@+id/nav_credits"
                android:icon="@drawable/ic_credits"
                android:title="@string/credits"/>
        <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share"/>
</menu>
