<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".aboutUs.AboutUsActivity"
    tools:showIn="@layout/activity_about_us">

    <androidx.cardview.widget.CardView
        android:background="@android:color/holo_green_light"
        android:layout_height="300dp"
        android:layout_margin="@dimen/text_margin"
        android:layout_width="match_parent"
        app:cardBackgroundColor="@color/offwhite"
        app:cardCornerRadius="4dp"
        app:cardElevation="6dp">

        <RelativeLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_head"
                android:layout_height="96dp"
                android:layout_marginEnd="10dp"
                android:layout_width="96dp"
                android:src="@drawable/img_shadab"/>

            <TextView
                style="@style/labelStyleMedium"
                android:id="@+id/txt_name1"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/img_head"
                android:layout_width="match_parent"
                android:text="@string/about_us_name"
                android:textColor="@android:color/black"/>

            <TextView
                style="@style/labelStyleSmall"
                android:id="@+id/designation1"
                android:layout_below="@id/txt_name1"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/img_head"
                android:layout_width="match_parent"
                android:text="@string/about_us_designation"/>

            <TextView
                style="@style/labelStyleMedium"
                android:id="@+id/txt_name2"
                android:layout_below="@id/designation1"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/img_head"
                android:layout_width="match_parent"
                android:text="@string/about_us_name2"
                android:textColor="@android:color/black"/>

            <TextView
                style="@style/labelStyleSmall"
                android:layout_below="@id/txt_name2"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/img_head"
                android:layout_width="match_parent"
                android:text="@string/about_us_designation2"/>

            <ImageView
                android:id="@+id/facebook"
                android:layout_below="@id/img_head"
                android:layout_height="45dp"
                android:layout_marginTop="30dp"
                android:layout_width="45dp"
                android:src="@drawable/ic_facebook"/>

            <ImageView
                android:id="@+id/twitter"
                android:layout_below="@id/img_head"
                android:layout_height="45dp"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginTop="30dp"
                android:layout_toEndOf="@id/facebook"
                android:layout_width="45dp"
                android:src="@drawable/ic_twitter"/>

            <ImageView
                android:id="@+id/instagram"
                android:layout_below="@id/img_head"
                android:layout_height="45dp"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginTop="30dp"
                android:layout_toEndOf="@id/twitter"
                android:layout_width="45dp"
                android:src="@drawable/ic_instagram"/>

        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</androidx.core.widget.NestedScrollView>